# deepflow-client

./: .gitignore  README.md  pyproject.toml  pyptoject.toml  requirements.txt
deepflow/: __init__.py  __main__.py  _consts.py
deepflow/cli/: _build_argparse.py  _cli.py  _dataset.py  _dataset_info.py  _dataset_persist.py  _dataset_update.py
deepflow/client/: __init__.py  _client.py
deepflow/command/: __init__.py  _base_command.py  _command.py  _dataset.py  _dataset_persist.py  _dataset_update.py
deepflow/function/dataset_persist/: __init__.py  _dataset_persist.py  _print_util.py  _wait_process_done.py
deepflow/util/: __init__.py
