[project]
name = "deepflow-client"
version = "0.10.0"
dependencies = [
    "requests==2.32.3",
    "prettytable==3.14.0",
    "jsonschema==4.23.0"
]

[tool.setuptools.packages.find]
include = ["deepflow*"]

[project.scripts]
deepflow = "deepflow.cli:cli"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
