[project]
name = "deepflow-client"
dependencies = [
    "requests==2.32.3",
    "prettytable==3.14.0"
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "deepflow.version.VERSION"}

[tool.setuptools.packages.find]
include = ["deepflow*"]

[project.scripts]
deepflow = "deepflow.cli:cli"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
